--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,12 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "prisma": "^5.22.0"
