--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
