--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "homepage": "https://bryanhjj.github.io/Messaging_App/login",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "predeploy": "npm run dist",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
