--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -7,7 +7,7 @@
     ],
     "headers": [
     {
-      "source": "/https://ma-backend-u2ci.onrender.com/(.*)",
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
